// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders TextInput 1`] = `
<div
  className="TextInput"
>
  <input
    defaultValue={undefined}
    onChange={undefined}
    type="text"
  />
  <label>
    some button
  </label>
</div>
`;

exports[`renders TextInput with a defaultValue 1`] = `
<div
  className="TextInput"
>
  <input
    defaultValue="default text"
    onChange={undefined}
    type="text"
  />
  <label>
    some button
  </label>
</div>
`;
